# krolib

./: .gitignore  .travis.yml  Makefile  README.md  setup.cfg  setup.py
docs/source/: api.rst  conf.py  examples.rst  format.rst  index.rst
krolib/: asyncio.py  parser.py  structs.py  utils.py
tests/: test_async.py  test_parser.py
