[aliases]
test=pytest

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
addopts = -vv -s
norecursedirs =
    .eggs
    *.egg
    .ropeproject
    build
testpaths =
    tests
    krolib
codestyle_ignore = E712 W503 W504 W605 W606
codestyle_max_line_length = 99
flakes-ignore =
    *.py E712

[flake8]
ignore =
    *.py E712
max-line-length = 99

[pycodestyle]
ignore = E712,W503,W504,W605
max-line-length = 99

[yapf]
based_on_style = pycodestyle
blank_line_before_nested_class_or_def = true
coalesce_brackets = true
column_limit = 99
dedent_closing_brackets = true
spaces_around_power_operator = true
indent_dictionary_value = true
